--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		"noEmit": true,
 		"target": "esnext",
 		"moduleResolution": "node",
-    "strict": "true",
-    "strictNullChecks": "true"
+    		"strict": true,
+    		"strictNullChecks": true
 	},
 	"include": [
 		"src/**/*.ts"
